# Bifrost

./: Cargo.toml  README.md
assets/shaders/: default.frag  default.vert  text_2d.frag  text_2d.vert
examples/: pong.rs  simple.rs
features/bifrost_derives/: Cargo.toml
features/bifrost_derives/src/: lib.rs
features/bifrost_ecs/: Cargo.toml
features/bifrost_ecs/src/: lib.rs
features/bifrost_ecs/src/bifrost_ecs/core/: component.rs  countdown.rs  entity.rs  event.rs  lifetime_system_exec.rs  plugins.rs  scene.rs
features/bifrost_ecs/src/bifrost_ecs/resources/: asset_loader_errors.rs  mod.rs
src/: lib.rs
src/bifrost_ecs/: mod.rs
src/bifrost_ecs/basic_componets_systems/components/graphics/: material.rs  mod.rs  quad.rs  sprite_renderer.rs
src/bifrost_ecs/basic_componets_systems/systems/graphics/: mod.rs
src/bifrost_ecs/basic_componets_systems/systems/physics/: mod.rs
src/bifrost_ecs/core/: archetype.rs  component.rs  countdown.rs  entity.rs  errors.rs  event.rs  lifetime_system_exec.rs  mod.rs  pipeline_executor.rs  query.rs  scene.rs
src/bifrost_ecs/inputs/: keys.rs  mod.rs  mouse.rs
src/bifrost_ecs/resources/: mod.rs  model.rs  shader.rs  sound.rs  text_renderer.rs  texture.rs  time.rs
src/bifrost_ecs/window/: mod.rs
