[package]
name = "bifrost_ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glow = "0.13.0"
glfw = "0.54.0"
bytemuck = "1.7.0"
nalgebra-glm = "0.18.0"
image = "0.24.7"
rand = "0.8.5"
freetype-rs = "0.34.0"
soloud = "0.4.4"

[[example]]
name = "pong"
path = "examples/pong.rs"

